# Catch2CUDAUsage

./: .gitmodules  CMakeLists.txt  main.cu  test.cu
